# miniupnp

minissdpd/: testminissdpd.sh
miniupnpc/: CMakeLists.txt
